about navigation pricing contact  routing

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,60 @@ body {
   position: relative;
 }
 
+.lazy-load{
+  z-index: 100;
+  height: calc(100vh + 10rem);
+  width: 100vw;
+  position: fixed;
+  top: -10rem;
+  left:0;
+  background-image: linear-gradient(
+    to right bottom,
+    var(--black-1),
+    var(--black-2),
+    var(--red)
+  );
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.lazy-heading{
+  color: white;
+  font-size: 7rem;
+  text-transform: uppercase;
+}
+
+.lazy-loading{
+  display: block;
+  color: grey;
+  font-size: 2rem;
+}
+
+.lazy-icon{
+  background-color: #777;
+  height: 5px;
+  position: relative;
+  top: 3rem;
+  width: 2rem;
+  animation: load 2s infinite;
+  transition: all .3s;
+}
+
+
+@keyframes load{
+  0%{
+    width: 1rem;
+    background-color: grey;
+  }
+  100%{
+    width:8rem;
+    background-color: white;
+  }
+}
+
+
 .navbar{
   height: 9rem;
   padding: 5rem;
@@ -151,14 +205,7 @@ body {
   transform: scale(1);
 }
 
- .current-false{
-   color: #777;
-   transform: scale(1);
- }
-
-.navbar-link:not(:nth-child(6)):focus,
-.navbar-link:not(:nth-child(6)):active,
-.current-true{
+.current{
   transform: scale(1.5);
   color: white;
 }
@@ -197,9 +244,6 @@ body {
     flex-direction: row;
     width: 60%;
     height: 5rem;
-  }
-  .navbar-link{
-    color: #777;
   }
 
   .mobile-true,.mobile-false{
@@ -362,7 +406,7 @@ body {
 
 
 .price{
-  background-image: linear-gradient(rgba(0,0,0,.8), rgba(0,0,0,.7)), url('./assets/price_page.jpg');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0,0,0,.95)), url('./assets/price_page.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top left;
@@ -374,12 +418,668 @@ body {
 .heading-section{
   font-size: 3rem;
   text-align: center;
-  color: #ddd;
+  color: transparent;
+  background-image: linear-gradient(to right bottom, var(--green), var(--red));
+  background-blend-mode: hue;
+  background-clip: text;
   margin: 4rem 1rem;
   font-family: 'Black Ops One';
+  position: relative;
+  filter: brightness(200%);
+
+}
+.heading-section::after{
+  height: 1.5px;
+  width: 100%;
+  max-width: 67rem;
+  content:'';
+  position: absolute;
+  bottom: -3px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-image: linear-gradient(to left bottom, var(--green), var(--red));
+}
+
+.price-paragraph{
+  color: #777;
+  font-size: 1.75rem;
+  margin: 0 auto;
+  display: block;
+  width: 100%;
 }
 
 .price-box{
   color: #777;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 85%;
+  margin: 2.5rem auto;
+  padding: 1.5rem;
+  vertical-align: text-bottom;
+}
+.individual__price{
+  margin: 1rem;
+  background-image: linear-gradient(rgba(255,255,255,.8),rgba(255,255,255,.85)),url('./assets/dumbbells.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 3rem 4rem 1rem 4rem;
+  min-height: 40rem;
+  max-width:40rem;
+  border-radius: 1rem;
+}
+
+.price-heading{
+  font-size: 5rem;
+  text-align: center;
+  margin-bottom: 2rem;
+  padding-bottom: .25rem;
+  color: var(--red);
+  border-bottom: 1px solid var(--red);
+}
+.price-heading > small{
+  font-size: 1rem;
+  text-transform: capitalize;
+}
+
+.card-paragraph{
+  color: var(--black-2);
+  font-size: 1.5rem;
+}
+
+.mini-desc{
+  font-size: 1.75rem;
+  display: flex;
+  justify-content: center;align-items: center;
+}
+
+.card-paragraph small{
+  margin-top: -1rem;
+  margin-bottom: 1rem;
+  display: block;
+}
+.individual__list{
+  list-style: none;
+}
+.individual__item{
+  display: flex;
+  justify-content: flex-start;
+  padding-left: 15%;
+  align-items: center;
+}
+
+@media (min-width:600px){
+  .heading-section{
+    font-size: 4rem;
+  }
+}
+
+@media (min-width:870px){
+  .price-box{
+    width: 90%;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .individual__price{
+    min-height: 45rem;
+  }
+  .price-heading{
+    font-size: 4.5rem;
+  }
+  .price-paragraph{
+    width: 80%;
+    margin: 0 auto;
+  }
+  .heading-section{
+    font-size: 5rem;
+  }
+}
+
+/* ------------------------------------------------------------------------ */
+/* -----------------------------  Footer ---------------------------------- */
+/* ------------------------------------------------------------------------ */
+
+.footer{
+  height: 75vh;
+  background-image: linear-gradient(to bottom right, var(--black-2), var(--black-1), #123);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-container{
+  height: 100%;
+  max-width:650px;
+  margin: auto;
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+
+.footer-icons{
+  width:75%;
+  margin: 2rem auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.footer-icon{
+  font-size: 3rem;
+  color: grey;
+  cursor: pointer;
+  transition: all .3s;
+}
+
+.footer-icon:hover{
+  transform: scale(1.3);
+  color: white;
+}
+
+.footer-sub{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: left;
+  margin: 1.5rem;
+  padding: .5rem;
+  color: grey;
+}
+
+.footer-subheading{
+  color: grey;
+  font-size: 1.25rem;
+  text-align: center;
+  cursor: pointer;
+  transition: all .2s;
+  margin-bottom: .5rem;
+}
+
+.footer-sub .footer-subheading{
+  text-align: left;
+}
+
+.footer-subheading:hover{
+  color: white;
+}
+
+.footer-copy{
+ margin-top: 5rem;
+ padding-top: 2rem;
+ border-top: 1px solid grey;
+}
+.footer-desc{
+  color: grey;
+  text-align: left;
+  font-weight: lighter;
+}
+.alt-location{
+  display: none;
+}
+
+.wrapper{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+@media (min-width:800px){
+  .footer{
+    height: 60vh;
+  }
+  .footer-container{
+    justify-content: flex-end;
+    padding: 2.5rem 0;
+  }
+  .footer-subheading{
+    font-size: 1.7rem;
+    margin-bottom: .2rem;
+  }
+  .footer-icon{
+    font-size: 3.5rem;;
+  }
+  .footer-copy{
+    margin-top: 2rem;
+  }
+ 
+}
+
+/* -------------------------------------------------------------------------- */
+/* ----------------------------- Contact Page ------------------------------- */
+/* -------------------------------------------------------------------------- */
+
+.contact{
+  height: 100vh;
+  margin-top: -15rem;
+  padding-top: 10rem;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.5),rgba(3, 3, 3, 0.86)) ,url('./assets/img1.jpg');
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+  color: #777;
+}
+
+.contact .heading-section{
+  font-size: 4rem;
+}
+.contact .heading-section::after{
+  max-width: 30rem;
+}
+
+.container{
+  margin: 3rem auto;
+  width: 80%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.contact-heading{
+  font-size: 3rem;
+  margin-bottom: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ddd;
+}
+.contact-paragraph{
+  font-size: 1.75rem;
+}
+
+.contact-section:nth-child(3) > .contact-paragraph{
+  text-decoration: underline;
+  cursor: pointer;
+  transition: all .2s;
+}
+.contact-section:nth-child(3) > .contact-paragraph:hover{
+  color: white;
+}
+
+@media (min-width:800px){
+  .contact .heading-section{
+    font-size: 5.5rem;
+  }
+  .contact-heading{
+    font-size: 3.5rem;
+  }
+  .contact-paragraph{
+    font-size: 2.75rem;
+  }
   
+}
+
+/* --------------------------------------------------------------------- */
+/* ------------------------- ABOUT PAGE -------------------------------- */
+/* --------------------------------------------------------------------- */
+
+.about-page{
+  min-height: 100vh;
+  margin-top: -15rem;
+  position: relative;
+  padding: 12rem 2rem 2rem 2rem;
+}
+.about-content{
+  color: #777;
+}
+
+.about-page-hero{
+  height: 100%;
+  width:100%;
+  object-fit: cover;
+  object-position: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  filter: grayscale(1) brightness(20%);
+  z-index: -5;
+}
+
+.about-section{
+  min-height: 30vh;
+}
+
+.about-heading{
+  font-size: 3.5rem;
+  text-align: center;
+  margin: 2rem 0;
+}
+
+.about-paragraph{
+  font-size: 1.5rem;
+  display: block;
+  font-weight: lighter;
+  max-width:90rem;
+  margin: auto;
+}
+
+.about-paragraph:not(:last-child){
+  font-size: 1.5rem;
+  display: block;
+  padding-bottom: 1rem;
+}
+
+.flexy{
+  display: grid;
+  max-width: 120rem;
+  margin: auto;
+  grid-template-columns: repeat( auto-fit, minmax(40rem, 1fr) );
+  gap: 2rem;
+  
+}
+/* ------------------------------------------------------------------ */
+/* ------------------------ EXPERT CARD ----------------------------- */
+/* ------------------------------------------------------------------ */
+
+.expert{
+  height: 30rem;
+  background: rgba(250,250,250,.2);
+  padding: 2rem 1.5rem;  
+  margin: 1rem auto;
+  border-radius: 5rem;
+  transform: scale(.95);
+  transition: transform .3s linear;
+  transform-origin: center;
+}
+
+.flex{
+  display: grid;
+  gap: 2rem;
+  grid-template-rows: 12fr 1fr;
+  grid-template-columns: 1fr 2fr;
+}
+.expert-img{
+  display: block;
+  grid-column: 1/1;
+  grid-row: 1/1;
+  height: 15rem;
+  width: 15rem;
+  margin-top: 3rem;
+  filter: grayscale(1);
+  object-fit: cover;
+  object-position: top;
+  clip-path: circle(50%);
+  transition: all .3s ease;
+}
+
+
+.expert-name{
+  display:block;
+  font-size: 3rem;
+  color: #111111;
+  padding-bottom: .5rem;
+  transition: all .2s;
+}
+.expert-sub{
+  display: block;
+  font-size: 1.2rem;
+  color: #777;
+  transition: all .2s;
+}
+.expert-detail{
+  font-size: 1.2rem;
+  font-weight: lighter;
+  transition: all .2s;
+}
+.expert-btn{
+  display: block;
+  margin: -1rem auto;
+  width:10rem;
+  border: none;
+  outline: none;
+  padding: .5rem 2rem;
+  text-transform: capitalize;
+  text-decoration: none;
+  font-size: 1.25rem;
+  opacity: 0;
+  overflow: hidden;
+  transform: translateY(200%);
+  transition: all .5s ease;
+  background-color: var(--red);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+  position: relative;
+}
+
+.expert-btn::after{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--red);
+  content: '';
+  z-index: -2;
+  transition: all .2s;
+  animation: swirl 10s infinite ease;
+}
+
+.expert-btn:hover{
+  color: var(--red);
+  background-color: white;
+  box-shadow: 0 2px 1rem rgba(0,0,0,.2);
+}
+
+.expert:hover{
+  transform: scale(1);
+  background: rgba(255, 253, 253, 0.4);
+}
+
+.expert:hover .expert-sub,
+.expert:hover .expert-detail{
+  color: #111111;
+}
+
+.expert:hover .expert-img{
+  filter: none;
+}
+
+.expert:hover .expert-name{
+  color: var(--red);
+}
+
+.expert:hover .expert-btn{
+  transform:translateY(0);
+  opacity: 1;
+}
+.expert-btn:hover::after{
+  animation: none;
+  height: 0;
+  width: 0;
+}
+
+@keyframes swirl{
+  0%{
+    height: 100%;
+  }
+  100%{
+    height: 0%;
+  }
+}
+
+/*----------------------------------------------------------------------*/
+/*----------------------- Individual Page ------------------------------*/
+/*----------------------------------------------------------------------*/
+
+.individual{
+  min-height: 100vh;
+  margin-top: -15rem;
+  padding-top: 12rem;
+}
+.individual-image{
+  display: block;
+  object-fit: cover;
+  object-position: top;
+  padding: 2rem;
+  border: 3px solid transparent;
+  border-radius: 3px;
+  height: 50rem;
+  width: 90%;
+  max-width:50rem;
+  margin: 2rem auto;
+  background: rgba(255, 255, 255, 0.1);
+  position: relative;
+  box-shadow: 0 1px 2px rgba(8, 1, 7, 0.5);
+  transition: all 1.5s ease-in-out;
+}
+
+.individual-image:hover{
+  filter: sepia(1);
+}
+
+.individual-hero{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width:100%;
+  z-index: -2;
+  object-fit: cover;
+  filter: grayscale(1) brightness(50%);
+}
+
+.individual-name{
+  display: block;
+  text-align: center;
+  font-size: 5rem;
+  margin: 2rem auto;
+  color: var(--red);
+  filter: brightness(150%);
+  text-shadow: 1.5px 0px var(--black-2);
+}
+
+
+.individual-desc, .individual-bold{
+  display: block;
+  width:80%;
+  margin: 0 auto;
+  color: #777;
+  font-size: 1.25rem;
+}
+
+.individual-bold{
+  font-size: 2.5rem;
+  padding: 2rem 0 .5rem 0;
+  border-bottom: 4px solid rgba(0, 0, 0, 0.5);
+  border-radius: 3px;
+  }
+
+.individual-paragraph{
+  padding: 1rem 4rem;
+  color: #777;
+  font-size: 1.3rem;
+}
+
+.back-btn{
+  text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 32%;
+  max-width: 15.5rem;
+  margin: auto;
+  padding: 3rem;
+  font-size: 2rem;
+  color: white;
+  transition: all .3s ease;
+  text-transform: uppercase;
+}
+
+.back-btn:hover{
+  color: var(--red);
+  filter: brightness(150%);
+  transform: translateY(-2px) scale(1.15);
+}
+
+@media (min-width:800px){
+  .individual-paragraph{
+    padding: 1.5rem 9rem;
+    color: #777;
+    font-size: 1.75rem;
+    font-weight: lighter;
+  }
+  .individual-desc{
+    display: block;
+    width:80%;
+    margin: 0 auto;
+    color: #777;
+    font-size: 2rem;
+  }
+  .individual-bold{
+    font-size: 3.5rem;
+    }
+}
+
+@media (min-width:1150px){
+  .individual{
+    height: auto;
+    padding: 12rem 2rem 3rem 2rem;
+    display: grid;
+    grid-template-rows: 10rem 3rem 3rem 8rem 15fr 2.5fr;
+    grid-template-columns: 1.5fr 2.5fr;
+    gap:1rem;
+  }
+  .individual-image{
+    grid-column: 1/1;
+    grid-row: 3/5;
+  }
+  
+   
+  .individual-name{
+    grid-row: 1/1;
+    grid-column: 2/-1;
+    width: 100%;
+    text-align:left;
+    margin: 1.5rem 0;
+  }
+  
+  .individual-desc{
+    grid-row: 2/2;
+    grid-column: 2/-1;
+    padding: 0;
+    margin: 0 0;
+
+  }
+  .individual-year{
+    grid-row: 3/3;
+    grid-column: 2/-1;
+    padding: 0;
+    margin: 0;
+
+  }
+  .individual-bold{
+    grid-row: 4/4;
+    grid-column: 2/-1;
+    padding: 0;
+    margin: 0;
+
+  }
+  .individual-paragraph{
+    grid-row: 5/5;
+    padding: 0;
+    margin: 0;
+    padding-right: 3rem;
+    grid-column: 2/-1;
+  }
+  .back-btn{
+    grid-row: 6/6;
+    grid-column: 1/-1;
+  }
+  
+
+  /*
+  
+  
+  .back-btn:hover{
+    color: var(--red);
+    filter: brightness(150%);
+    transform: translateY(-2px) scale(1.15);
+  } */
 }
